# stock-advisor

./: LICENSE  README.md
FortuneTeller/: app.py  pyproject.toml  ui_config.py  unittests.py
FortuneTeller/api/: news_sentiment.py  stock_data.py  technical_analysis.py  utils.py
FortuneTeller/gui/: style.css
